<resources>

    <string name="app_name">Decision Maker</string>
    <string name="title_activity_main">Decision Maker</string>
    <string name="title_activity_edit">Editor</string>
    <string name="title_activity_settings">Settings</string>
    <string name="select_program">Select your options:</string>
    <string name="option_display_default">Tap!</string>
    <string name="no_options_message">No options to display!</string>
    
    <string name="editor_name">Name</string>
    <string name="editor_options">Options</string>
    <string name="editor_new_option">Add an option</string>
    <string name="editor_add">Add</string>
    <string name="editor_delete">Delete</string>
    <string name="editor_edit">Edit</string>
    <string name="editor_cancel">Cancel</string>
    <string name="editor_editing">Editing \"%s\"...</string>
    
    <string name="about_dialog_message">by Jonathan Chow\n\nSource is available on GitHub:\nhttps://github.com/echo-sh/DecisionMaker</string>
    <string name="delete_confirm_dialog_title">Delete</string>
    <string name="delete_confirm_dialog_message">Are you sure you want to delete \"%s\"?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="back_confirm_dialog_title">Save</string>
    <string name="back_confirm_dialog_message">Do you want to save your changes?</string>
    
    <string name="welcome_message">Welcome! Simply tap to get started!</string>
    <string name="default_program_name">Yes or No</string>
    
    <string name="editor_warn_empty_option">You can\'t have an empty option!</string>
    <string name="editor_warn_no_name">You must have a name!</string>
    <string name="editor_warn_duplicate_name">This name is already used!</string>
    <string name="editor_warn_no_options">You must have at least one option!</string>

    <string-array name="default_program_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="menu_new">New</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_about">About</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_settings">Settings</string>

    <color name="nice_shade_of_light_blue">#0052b4e8</color>
    <color name="nice_shade_of_light_green">#0098e852</color>
    
    <string name="pref_cat_shake">Shake gesture</string>
    <string name="pref_shake_enable">Enable shake control</string>
    <string name="pref_shake_enable_summary">Trigger a new option with a quick shake</string>
    <string name="pref_shake_sensitivity">Set shake sensitivity</string>
    <string name="pref_shake_sensitivity_summary">Calibrate your device for the shake gesture</string>

</resources>