<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_new"
        android:title="@string/menu_new"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_menu_edit"
        android:orderInCategory="2"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="3"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_menu_info_details"
        android:orderInCategory="4"
        android:showAsAction="never" />
</menu>
